--- a/src/App.css
+++ b/src/App.css
@@ -110,3 +110,48 @@
   display: flex;
   flex-direction: row;
 }
+
+.slider {
+  position: relative;
+  height: 90vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.image {
+  height: 400px;
+  border-radius: 10px;
+}
+.right-arrow {
+  position: absolute;
+  top: 50%;
+  right: 90px;
+  font-size: 3rem;
+  color: #282c34;
+  z-index: 10;
+  cursor: pointer;
+  user-select: none;
+}
+.right-arrow:hover,
+.left-arrow:hover {
+  background-color: #ddcece;
+  transition: 0.2s ease-out;
+}
+
+.left-arrow {
+  position: absolute;
+  top: 50%;
+  left: 90px;
+  font-size: 3rem;
+  color: #282c34;
+  z-index: 10;
+  cursor: pointer;
+  user-select: none;
+}
+
+.slide {
+  opacity: 1;
+  transition-duration: 1s;
+  transform: scale(1.08);
+}
